refactor: Migrate the project to Java 17. (#518)
This sets the baseline to Java 17 for the whole of `cypher-dsl`. To the outside world the biggest change apart from requiring the current Java LTS is the fact that all relevant modules are proper modularised, that is, they contain a `module-info.java` and you can safely use them on the module path if you want to.

This change will allow further upgrades (Spring Data 7 support, Spring Boot 3 examples) as well as upgrading to the Neo4j 5 parser, supporting modern Cypher for rewrites.

2022.8.x will supported for people stuck on 8 or 11.