@@ -32,7 +32,6 @@
 	<description>The core module of the Cypher DSL, including all supported elements and the default renderer.</description>
 
 	<properties>
-		<java-module-name>org.neo4j.cypherdsl.core</java-module-name>
 		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
@@ -64,7 +63,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-dsl-build</artifactId>
+			<artifactId>neo4j-cypher-dsl-build-annotations</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 			<optional>true</optional>
@@ -109,15 +108,12 @@
 
 	<build>
 		<plugins>
+			<!-- Configuration for surefire added because the stuff is not able to deal with the optional required module and in turn, JUnit 5 falls over during test discovering -->
 			<plugin>
-				<groupId>com.github.siom79.japicmp</groupId>
-				<artifactId>japicmp-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration combine.self="append">
-					<parameter>
-						<ignoreMissingClassesByRegularExpressions>
-							<ignoreMissingClassesByRegularExpression>com\.querydsl\.core\..*</ignoreMissingClassesByRegularExpression>
-						</ignoreMissingClassesByRegularExpressions>
-					</parameter>
+					<argLine>@{argLine} -Xverify:all --add-modules com.querydsl.core --add-reads org.neo4j.cypherdsl.core=com.querydsl.core</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -127,9 +123,19 @@
 					<execution>
 						<id>default-compile</id>
 						<configuration combine.self="append">
+							<forceJavacCompilerUse>true</forceJavacCompilerUse>
 							<compilerArgs>
 								<arg>-Aorg.neo4j.cypherdsl.build.native_config_dir=${project.groupId}/${project.artifactId}</arg>
+								<arg>-Xlint:all,-options,-path,-processing</arg>
+								<arg>-Werror</arg>
 							</compilerArgs>
+							<annotationProcessorPaths>
+								<annotationProcessorPath>
+									<groupId>org.neo4j</groupId>
+									<artifactId>neo4j-cypher-dsl-build-proc</artifactId>
+									<version>${project.version}</version>
+								</annotationProcessorPath>
+							</annotationProcessorPaths>
 						</configuration>
 					</execution>
 					<execution>
@@ -188,6 +194,38 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.moditect</groupId>
+				<artifactId>moditect-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>add-module-infos</id>
+						<phase>package</phase>
+						<goals>
+							<goal>add-module-info</goal>
+						</goals>
+						<configuration>
+							<overwriteExistingFiles>true</overwriteExistingFiles>
+							<module>
+								<moduleInfoFile>src/main/java/module-info.java</moduleInfoFile>
+							</module>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.siom79.japicmp</groupId>
+				<artifactId>japicmp-maven-plugin</artifactId>
+				<configuration combine.self="append">
+					<parameter>
+						<ignoreMissingClassesByRegularExpressions>
+							<ignoreMissingClassesByRegularExpression>com\.querydsl\.core\..*</ignoreMissingClassesByRegularExpression>
+							<ignoreMissingClassesByRegularExpression>org\.neo4j\.cypherdsl\.core\.internal\.LiteralBase</ignoreMissingClassesByRegularExpression>
+							<ignoreMissingClassesByRegularExpression>org\.neo4j\.cypherdsl\.core\.internal\.StatementContext</ignoreMissingClassesByRegularExpression>
+						</ignoreMissingClassesByRegularExpressions>
+					</parameter>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
